--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ body {
   font-weight: bold;
   font-size: 20px;
   width: 200px;
+  height: 75px;
   margin: 25px auto 25px auto;
   display: block;
 }
