--- a/main.css
+++ b/main.css
@@ -1,12 +1,5 @@
 body {
-  /*background-color: #0A480D;*/
-  background-color:black;
-}
-#entry {
-  border: 2px solid black;
-  background-color: #0A480D;
-  margin: 20px auto;
-  width: 550px;
+  background-color:white;
 }
 #enterspot {
   text-align: center;
