--- a/main.css
+++ b/main.css
@@ -1,23 +1,16 @@
 body {
   background-color:white;
 }
-#enterspot {
-  text-align: center;
-  font-family: Arial;
-  font-size: 25px;
-  color: black;
-  background-color: white;
-  margin: 20px 20px 20px 20px;
-  padding: 3px 3px 3px 3px;
-}
 #enterbar {
   text-align: center;
   font-family: Arial;
-  font-size: 25px;
+  font-size: 30px;
   color: black;
-  background-color: white;
-  margin: 20px 20px 20px 20px;
-  padding: 3px 3px 3px 3px;
+  padding: auto;
+  position: fixed;
+  left: 50%;
+  margin-left: -161px;
+  margin-top: 10px;
 }
 #runbutton {
   border-radius: 8px;
